# stereo_extrinsic_calib

./: CMakeLists.txt  README.md  README_cn.md  package.xml
src/: calib_node.cpp
