<package format="2">
  <name>stereo_extrinsic_calib</name>
  <version>0.0.1</version>
  <description>Stereo camera extrinsic calibration from clicked RViz points</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
</package>
